Fixed the SRS 3948 issue; Fixed style issue with the elevation box width being too big

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,7 +409,7 @@ th{
 /*change overlay box width and height*/
 #cmt .cmtViewerPanel,  #cmt .cmtViewerPanel .card{
     width:100%;
-    max-width:325px;
+    max-width:325px !important;
     max-height:250px;
 }
 #cmt .card{
